Correction scss for better readability

--- a/Mediscreen-front/src/app/app.component.scss
+++ b/Mediscreen-front/src/app/app.component.scss
@@ -9,18 +9,20 @@ ul {
 li {
   float: left;
   padding: 14px 16px;
-}
-
-li a {
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-li a:hover {
-  background-color: #111;
+  li {
+    float: left;
+    padding: 14px 16px;
+    a {
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 18px;
+      &:hover {
+        background-color: #111;
+      }
+    }
+  }
 }
 
 .container{
