--- a/Mediscreen-front/src/app/patient-edit/patient-edit.component.scss
+++ b/Mediscreen-front/src/app/patient-edit/patient-edit.component.scss
@@ -1,39 +1,35 @@
-.btn-back{
-  margin-right:10%;
-  border-color: silver;
-}
-.btn-back:hover{
-  border-color: silver;
-  background-color: silver;
-}
-
-.btn-primary{
-  border-color: rgb(65,94,211);
-  background-color: white;
-  color: rgb(65,94,211);
-  cursor: pointer;
-}
-
-.btn-primary:hover {
-  border-color: rgb(65,94,211);
-  background-color:rgb(65,94,211);
-  color: white;
-}
-
 .buttons {
   float: right;
   overflow: visible;
   width: 21%;
+  .btn-back{
+    margin-right:10%;
+    border-color: silver;
+    &:hover{
+      border-color: silver;
+      background-color: silver;
+    }
+  }
+  .btn-primary{
+    border-color: #4CAF50;
+    background-color: white;
+    color: #4CAF50;
+    cursor: pointer;
+    &:hover {
+      border-color: #4CAF50;
+      background-color:#4CAF50;
+      color: white;
+    }
+  }
 }
 
 input {
-  width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-}
-input[type=text]:focus {
-  border: 3px solid #555;
+  &[type=text]:focus {
+    border: 3px solid #555;
+  }
 }
 
 select {
